Add clap dependency into new philpsx_basic_bin crate - this will be the way to launch PhilPSX during development. Later I will think about a proper GUI for it but plan is for this binary to use SDL via the Rust bindings, and work similarly to how the C version does in that regard.

--- a/philpsx_basic_bin/Cargo.toml
+++ b/philpsx_basic_bin/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2024"
 authors = [
     "Phillip Potter <phil@philpotter.co.uk>"
 ]
+
+[dependencies]
+clap = { version = "4.5.54", features = ["derive"] }
